# uvc

./: .cursorrules  .easignore  .gitignore  .npmignore  .prettierrc  .taskmasterconfig  .watchmanconfig  .windsurfrules  .xcode.env.local  @OneCoreErrors.d.ts  @OneCoreObjects.d.ts  @OneCoreTypes.d.ts  @OneModelsTypes.d.ts  @OneObjectInterfaces.d.ts  ANALYSIS_SUMMARY.md  AUDIT_TRAIL_ARCHITECTURE.md  App.js  App.tsx  CIRCULAR_DEPENDENCY_FIXES.md  CLAUDE.ai.md  CLAUDE.md  COMPLETE_WATCHDOG_SOLUTION.md  CONNECTION_DISPLAY_FIX.md  CRITICAL_FIX_SUMMARY.md  DEVICE_OWNERSHIP_JOURNAL_LOGGING.md  DEVICE_TYPE_STRATEGY.md  EP_KEYMISSMATCH_COMPLETE_DEBUGGING_GUIDE.md  EP_KEYMISSMATCH_DEBUGGING_GUIDE.md  EP_KEYMISSMATCH_SUCCESS_ANALYSIS.md  EP_KEYMISSMATCH_SUMMARY.md  ESP32-PROVISIONING-FIX-SUMMARY.md  INVITE_FLOW_ROOT_CAUSE_ANALYSIS.md  LICENSE  LOAD_EXPO_FIX.md  MCP.md  MEMORY.md  MEMORY_APP_INITIALIZATION_ORDER.md  MEMORY_CODE_UNDERSTANDING.md  MEMORY_ONE_ACCESS_SYSTEM.md  MEMORY_ONE_CRDT_SYSTEM.md  (+133 more)
.cursor/: mcp.json
.taskmaster/: config.json  connection-implementation-tasks.json  state.json
android-custom-modules/: build.gradle  settings.gradle
android-custom-modules/src/main/cpp/: CMakeLists.txt
app/: _layout.tsx  index.tsx
docs/: BLEDirectModule.md  CONNECTION_HANDOVER_FIX.md  CommServerImplementation.md  LlamaModel.md  PAIRING_TROUBLESHOOTING.md  PERSON_ID_FIX_SUMMARY.md  Profile.md  ai-integration.md  api-reference.md  architecture.md  btle-refactoring.md  channelInvestigation.md  chum-protocol-memory.md  chum.md  connections.md  development.md  expo-ble-setup.md  (+16 more)
(+900 files in other folders)
